# test_task

./: .gitignore  db.sqlite3  pyproject.toml
menu_task/: admin.py  apps.py  models.py  urls.py  views.py
menu_task/migrations/: 0001_initial.py
menu_task/templates/: home.html  menu.html
menu_task/templatetags/: menu_tags.py
test_task/: settings.py  urls.py
